--- a/docs/kakuninsan/css/style.css
+++ b/docs/kakuninsan/css/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-size: 14px;
 }
 
 body{
@@ -10,8 +11,12 @@ body{
     color: #000;
 }
 
+body h1:first-child{
+    display: none;
+}
+
 h1{
-    font-size: 3rem;
+    font-size: 1.8rem;
 }
 h2{
     color: #364e96;
@@ -19,7 +24,7 @@ h2{
     margin-top: 5rem;
     border-left: solid 12px #364e96;
     border-bottom: solid 3px #364e96;
-    font-size: 2rem;
+    font-size: 1.4rem;
 }
 
 h3{
@@ -28,11 +33,11 @@ h3{
     margin-top: 4rem;
     border-top: solid 3px #364e96;
     border-bottom: solid 3px #364e96;
-    font-size: 1.8rem;
+    font-size: 1.2rem;
 }
 
-p{
-    font-size: 1.6rem;
+p, li{
+    font-size: 1.2rem;
 }
 
 @media screen and (min-width: 768px){
