--- a/docs/kakuninsan/css/style.css
+++ b/docs/kakuninsan/css/style.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    font-size: 14px;
 }
 
 body{
@@ -16,15 +15,16 @@ body h1:first-child{
 }
 
 h1{
-    font-size: 1.8rem;
+    font-size: 1.8rem!important;
 }
+
 h2{
     color: #364e96;
     padding: 0.5em;
     margin-top: 5rem;
     border-left: solid 12px #364e96;
     border-bottom: solid 3px #364e96;
-    font-size: 1.4rem;
+    font-size: 1.4!important;
 }
 
 h3{
@@ -33,15 +33,9 @@ h3{
     margin-top: 4rem;
     border-top: solid 3px #364e96;
     border-bottom: solid 3px #364e96;
-    font-size: 1.2rem;
+    font-size: 1.2!important;
 }
 
 p, li{
-    font-size: 1.2rem;
-}
-
-@media screen and (min-width: 768px){
-    h2{
-        /* font-size: 1rem; */
-    }
+    font-size: 1.2!important;
 }
