--- a/docs/kakuninsan/css/style.css
+++ b/docs/kakuninsan/css/style.css
@@ -24,7 +24,7 @@ h2{
     margin-top: 5rem;
     border-left: solid 12px #364e96;
     border-bottom: solid 3px #364e96;
-    font-size: 1.4!important;
+    font-size: 1.4rem!important;
 }
 
 h3{
@@ -33,9 +33,9 @@ h3{
     margin-top: 4rem;
     border-top: solid 3px #364e96;
     border-bottom: solid 3px #364e96;
-    font-size: 1.2!important;
+    font-size: 1.2rem!important;
 }
 
 p, li{
-    font-size: 1.2!important;
+    font-size: 1.2rem!important;
 }
