--- a/docs/kakuninsan/css/style.css
+++ b/docs/kakuninsan/css/style.css
@@ -20,7 +20,7 @@ h1{
 
 h2{
     color: #364e96;
-    padding: 0.3em;
+    padding: 0.3em 0 0.3em 0.3em;
     margin-top: 5rem;
     border-left: solid 12px #364e96;
     border-bottom: solid 3px #364e96;
