--- a/docs/kakuninsan/css/style.css
+++ b/docs/kakuninsan/css/style.css
@@ -2,40 +2,43 @@
     margin: 0;
     padding: 0;
 }
-
 body{
     max-width: 100%;
     padding: 0 15px;
     background-color: #fff;
     color: #000;
 }
-
 body h1:first-child{
     display: none;
 }
-
 h1{
     font-size: 1.8rem!important;
 }
-
 h2{
     color: #364e96;
     padding: 0.3em 0 0.3em 0.3em;
-    margin-top: 5rem;
+    margin-top: 2.5rem;
     border-left: solid 12px #364e96;
     border-bottom: solid 3px #364e96;
     font-size: 1.3rem!important;
 }
-
 h3{
     color: #364e96;
     padding: 0.5em 0;
-    margin-top: 4rem;
+    margin-top: 2.5rem;
     border-top: solid 3px #364e96;
     border-bottom: solid 3px #364e96;
     font-size: 1.1rem!important;
 }
-
 p, li{
     font-size: 1rem!important;
+}
+
+@media screen and (min-width: 767px) {
+    h2{
+        margin-top: 5rem;
+    }
+    h3{
+        margin-top: 4rem;
+    }
 }
